improve server, make a better file system routes approach

--- a/deno.json
+++ b/deno.json
@@ -6,6 +6,8 @@
     ".": "./src/mod.ts"
   },
   "imports": {
-    "@std/path": "jsr:@std/path@1"
+    "@std/expect": "jsr:@std/expect@^1.0.7",
+    "@std/path": "jsr:@std/path@1",
+    "@std/fs": "jsr:@std/fs@1"
   }
 }
